Fix z-index of highlight

--- a/app/assets/stylesheets/commit.css.sass
+++ b/app/assets/stylesheets/commit.css.sass
@@ -33,6 +33,7 @@ body
   font-family: "Arial Rounded MT", "Helvetica Rounded", Arial, sans-serif
 
 #highlight
+  z-index: -1
   position: absolute
   top: 0
   left: 21px
